IGNITE-9684: Hadoop: pass JDK 9+ options to nodes in external processes. This closes #4918.